[backend] Refactor connector configuration + change relationship type