@@ -80,7 +80,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
     public class ForRegisteringConnectors {
       @Test
       @DisplayName("When request crashes, throw exception")
-      public void whenRequestCrashes_throwException() throws IOException, ConnectorError {
+      public void whenRequestCrashes_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         when(mockOpenCTIClient.execute(any(), any(), any(RegisterConnector.class)))
             .thenThrow(IOException.class);
@@ -91,7 +91,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When response has errors in it, throw exception")
-      public void whenResponseHasErrorsInIt_throwException() throws IOException, ConnectorError {
+      public void whenResponseHasErrorsInIt_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         Response errorResponse = ResponseFixture.getErrorResponse();
         when(mockOpenCTIClient.execute(any(), any(), any(RegisterConnector.class)))
@@ -99,7 +99,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
         assertThatThrownBy(() -> openCTIService.registerConnector(testConnector))
             .isInstanceOf(ConnectorError.class)
-            .hasMessageContaining(errorResponse.getErrors().get(0).getMessage())
+            .hasMessageContaining(errorResponse.getErrors().getFirst().getMessage())
             .hasMessageContaining(
                 "Failed to register connector %s with OpenCTI at %s"
                     .formatted(testConnector.getName(), testConnector.getUrl()));
@@ -154,7 +154,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
     public class ForPingingConnectors {
       @Test
       @DisplayName("When response has errors in it, throw exception")
-      public void whenResponseHasErrorsInIt_throwException() throws IOException, ConnectorError {
+      public void whenResponseHasErrorsInIt_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         testConnector.setRegistered(true); // so it can ping!
         Response errorResponse = ResponseFixture.getErrorResponse();
@@ -162,7 +162,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
         assertThatThrownBy(() -> openCTIService.pingConnector(testConnector))
             .isInstanceOf(ConnectorError.class)
-            .hasMessageContaining(errorResponse.getErrors().get(0).getMessage())
+            .hasMessageContaining(errorResponse.getErrors().getFirst().getMessage())
             .hasMessageContaining(
                 "Failed to ping connector %s with OpenCTI at %s"
                     .formatted(testConnector.getName(), testConnector.getUrl()));
@@ -170,7 +170,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When request crashes, throw exception")
-      public void whenRequestCrashes_throwException() throws IOException, ConnectorError {
+      public void whenRequestCrashes_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         testConnector.setRegistered(true); // so it can ping!
         when(mockOpenCTIClient.execute(any(), any(), any(Ping.class))).thenThrow(IOException.class);
@@ -214,7 +214,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When connector not yet registered, throw exception")
-      public void wheConnectorNotYetRegistered_throwException() throws IOException, ConnectorError {
+      public void wheConnectorNotYetRegistered_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         when(mockOpenCTIClient.execute(any(), any(), any(Ping.class)))
             .thenReturn(ResponseFixture.getOkResponse());
@@ -236,7 +236,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When request crashes, throw exception")
-      public void whenRequestCrashes_throwException() throws IOException, ConnectorError {
+      public void whenRequestCrashes_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         testConnector.setRegistered(true); // so it can push!
         when(mockOpenCTIClient.execute(any(), any(), any(PushStixBundle.class)))
@@ -248,7 +248,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When response has errors in it, throw exception")
-      public void whenResponseHasErrorsInIt_throwException() throws IOException, ConnectorError {
+      public void whenResponseHasErrorsInIt_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         testConnector.setRegistered(true); // so it can push!
         Response errorResponse = ResponseFixture.getErrorResponse();
@@ -257,7 +257,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
         assertThatThrownBy(() -> openCTIService.pushStixBundle(createBundle(), testConnector))
             .isInstanceOf(ConnectorError.class)
-            .hasMessageContaining(errorResponse.getErrors().get(0).getMessage())
+            .hasMessageContaining(errorResponse.getErrors().getFirst().getMessage())
             .hasMessageContaining(
                 "Failed to push STIX bundle via connector %s to OpenCTI at %s"
                     .formatted(testConnector.getName(), testConnector.getUrl()));
@@ -289,7 +289,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
 
       @Test
       @DisplayName("When connector not yet registered, throw exception")
-      public void wheConnectorNotYetRegistered_throwException() throws IOException, ConnectorError {
+      public void wheConnectorNotYetRegistered_throwException() throws IOException {
         ConnectorBase testConnector = ConnectorFixture.getDefaultConnector();
         when(mockOpenCTIClient.execute(any(), any(), any(PushStixBundle.class)))
             .thenReturn(ResponseFixture.getOkResponse());
@@ -306,19 +306,6 @@ public class OpenCTIServiceTest extends IntegrationTest {
   @Nested
   @DisplayName("Automated privileges provisioning")
   public class AutomatedPrivilegesProvisioning {
-    private Role createProvisionedRole() {
-      Role specificRole = RoleFixture.getRole();
-      specificRole.setId(Constants.PROCESS_STIX_ROLE_ID);
-      specificRole.setName(Constants.PROCESS_STIX_ROLE_NAME);
-      specificRole.setDescription(Constants.PROCESS_STIX_ROLE_DESCRIPTION);
-      specificRole.setCapabilities(Constants.PROCESS_STIX_ROLE_CAPABILITIES);
-
-      Role saved = roleComposer.forRole(specificRole).persist().get();
-      entityManager.flush();
-      entityManager.clear();
-      return saved;
-    }
-
     @Nested
     @DisplayName("On register()")
     public class OnRegister {
@@ -339,7 +326,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         Optional<Role> role = roleService.findById(Constants.PROCESS_STIX_ROLE_ID);
 
         assertThat(role).isNotEmpty();
-        assertThat(role.get().getCapabilities())
+        assertThat(role.orElseThrow().getCapabilities())
             .isEqualTo(Constants.PROCESS_STIX_ROLE_CAPABILITIES);
         assertThat(role.get().getName()).isEqualTo(Constants.PROCESS_STIX_ROLE_NAME);
         assertThat(role.get().getDescription()).isEqualTo(Constants.PROCESS_STIX_ROLE_DESCRIPTION);
@@ -446,7 +433,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         entityManager.flush();
         entityManager.clear();
 
-        Optional<User> user = userService.findByToken(testConnector.getAuthToken());
+        Optional<User> user = userService.findByToken(testConnector.getToken());
 
         assertThat(user).isNotEmpty();
         assertThat(user.get().getEmail())
@@ -470,8 +457,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         userComposer
             .forUser(specificUser)
             .withToken(
-                tokenComposer.forToken(
-                    TokenFixture.getTokenWithValue(testConnector.getAuthToken())))
+                tokenComposer.forToken(TokenFixture.getTokenWithValue(testConnector.getToken())))
             .persist();
         entityManager.flush();
         entityManager.clear();
@@ -484,7 +470,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         entityManager.flush();
         entityManager.clear();
 
-        Optional<User> user = userService.findByToken(testConnector.getAuthToken());
+        Optional<User> user = userService.findByToken(testConnector.getToken());
 
         assertThat(user).isNotEmpty();
         assertThat(user.get().getEmail())
@@ -622,7 +608,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         entityManager.flush();
         entityManager.clear();
 
-        Optional<User> user = userService.findByToken(testConnector.getAuthToken());
+        Optional<User> user = userService.findByToken(testConnector.getToken());
 
         assertThat(user).isNotEmpty();
         assertThat(user.get().getEmail())
@@ -647,8 +633,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         userComposer
             .forUser(specificUser)
             .withToken(
-                tokenComposer.forToken(
-                    TokenFixture.getTokenWithValue(testConnector.getAuthToken())))
+                tokenComposer.forToken(TokenFixture.getTokenWithValue(testConnector.getToken())))
             .persist();
         entityManager.flush();
         entityManager.clear();
@@ -660,7 +645,7 @@ public class OpenCTIServiceTest extends IntegrationTest {
         entityManager.flush();
         entityManager.clear();
 
-        Optional<User> user = userService.findByToken(testConnector.getAuthToken());
+        Optional<User> user = userService.findByToken(testConnector.getToken());
 
         assertThat(user).isNotEmpty();
         assertThat(user.get().getEmail())
